# RadiantsToDegrees

./: .gitignore  build.gradle.kts  settings.gradle.kts  versions.toml
app/: build.gradle.kts
app/src/androidTest/java/com/msignoretto/radiantstodegrees/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/msignoretto/radiantstodegrees/: MainActivity.kt
app/src/main/java/com/msignoretto/radiantstodegrees/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
scripts/: buildLocalNativeLib.sh  buildLocalNativeLibInternal.sh
utils/: build.gradle.kts
utils/src/androidTest/java/com/msignoretto/radiantstodegrees/: ExampleInstrumentedTest.kt
utils/src/androidTest/java/com/msignoretto/radiantstodegrees/utils/: UtilsIntegrationTest.kt
utils/src/main/: AndroidManifest.xml
utils/src/main/cpp/: CMakeLists.txt  radiantstodegrees.cpp  utils.cpp  utils.h
utils/src/main/java/com/msignoretto/radiantstodegrees/utils/: NativeLib.kt  Utils.kt
utils/src/test/java/com/msignoretto/radiantstodegrees/: ExampleUnitTest.kt
utils/src/test/java/com/msignoretto/radiantstodegrees/utils/: UtilsTest.kt
